# dataSpark

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
dataspark/: __init__.py
dataspark/cleansing/: __init__.py  cleaner.py  deduplication.py  outliers.py  type_inference.py
dataspark/connectors/: __init__.py  spark_connector.py  sql_connector.py
dataspark/deep_learning/: __init__.py  models.py  trainer.py
dataspark/eda/: __init__.py  correlations.py  distributions.py  explorer.py  visualizations.py
dataspark/ml_pipelines/: __init__.py  feature_engineering.py  model_selection.py  pipeline_builder.py
dataspark/sampling/: __init__.py  sampler.py
dataspark/statistical/: __init__.py  effect_size.py  hypothesis.py  nonparametric.py
dataspark/timeseries/: __init__.py  decomposition.py  features.py  forecasting.py
dataspark/utils/: validation.py
dataspark/visualization/: __init__.py  charts.py  dashboard.py  interactive.py  themes.py
docs/: cleansing_module_documentation.md  eda_module_documentation.md  sampling_module_documentation.md  statistical_module_documentation.md
examples/: cleansing_module_function_walkthrough.ipynb  eda_module_creative_analysis.ipynb  retail_analytics_case_study.ipynb  retail_analytics_v2.ipynb  sampling_module_from_cleansing_walkthrough.ipynb  statistical_module_creative_analysis.ipynb
tests/: conftest.py  test_cleansing.py  test_deep_learning.py  test_eda.py  test_ml_pipelines.py  test_sampling.py  test_statistical.py  test_timeseries.py  test_visualization.py
